--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -163,20 +163,20 @@ bool de(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
 
 <h4> Basic Differential Evolution (DE)</h4>
 
-<p>Let $X_{i}$ denote a $N_p \times d$-dimensional array of values at stage $i$ of the algorithm. The basic DE algorithm is comprised of three steps.</p>
+<p>Let $X^{(i)}$ denote a $N_p \times d$-dimensional array of values at stage $i$ of the algorithm. The basic DE algorithm is comprised of three steps.</p>
 <ul>
-    <li><strong>The Mutation Step.</strong> For random and unique indices $a,b,c$:</li>
+    <li><strong>The Mutation Step.</strong> For unique random indices $a,b,c$:</li>
     <ul>
         <li>if <code>de_mutation_method = 1</code>, use the 'rand' method:</li>
-        $$X^* = X_i(c,:) + F \times (X_i(a,:) - X_i(b,:))$$
+        $$X^* = X^{(i)}(c,:) + F \times (X^{(i)}(a,:) - X^{(i)}(b,:))$$
         <li>if <code>de_mutation_method = 2</code>, use the 'best' method:</li>
-        $$X^* = X_i(\text{best},:) + F \times (X_i(a,:) - X_i(b,:))$$
-        where $X_i(\text{best},:) := \arg \min \{ f(X_i(1,:)), \ldots, f(X_i(N,:)) \}$.</li>
+        $$X^* = X^{(i)}(\text{best},:) + F \times (X^{(i)}(a,:) - X^{(i)}(b,:))$$
+        where $X^{(i)}(\text{best},:) := \arg \min \{ f(X^{(i)}(1,:)), \ldots, f(X^{(i)}(N,:)) \}$.</li>
     </ul>
     <li><strong>The Crossover Step.</strong> For a random integer $r_k \in \{1, \ldots, d\}$,</li>
-    $$X_c^* (j,k) = \begin{cases} X^*(j,k) & \text{ if } u_k \leq CR \text{ or } k = r_k \\ X_i (j,k) & \text{ else } \end{cases}$$
+    $$X_c^* (j,k) = \begin{cases} X^*(j,k) & \text{ if } u_k \leq CR \text{ or } k = r_k \\ X^{(i)} (j,k) & \text{ else } \end{cases}$$
     <li><strong>The Update Step.</strong></li>
-    $$X_{i+1} (j,:) = \begin{cases} X_c^*(j,:) & \text{ if } f(X_c^*(j)) < f(X_i(j)) \\ X_i (j) & \text{ else } \end{cases}$$
+    $$X^{(i+1)} (j,:) = \begin{cases} X_c^*(j,:) & \text{ if } f(X_c^*(j)) < f(X^{(i)}(j)) \\ X^{(i)} (j) & \text{ else } \end{cases}$$
 </ul>
 
 <p>The algorithm stops when the relative improvement in the objective function is less than <code>err_tol</code> between <code>de_check_freq</code> number of generations, or when the total number of 'generations' exceeds <code>n_gen</code>.</p>
@@ -187,7 +187,7 @@ bool de(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
 
 <br>
 
-<p>Let $X_{i}$ denote a $N_p \times d$-dimensional array of values at stage $i$ of the algorithm.</p>
+<p>Let $X^{(i)}$ denote a $N_p \times d$-dimensional array of values at stage $i$ of the algorithm.</p>
 <ul>
     <li>Let $M$ denote the maximum number of function evaluations (of which there are $N_p$ per generation).</li>
     <li>Each generation is split into two sub-populations of size $N_{p}^{(m)}$ and $N_{p}^{(b)} = N_p - N_{p}^{(m)}$, labelled the 'main' population and the 'best' population, respectively.</li>
@@ -202,7 +202,7 @@ bool de(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
     reduce the population by half ($N_p /2$) and double the number of generations ($2 \times N_g$).
     <br>
     Values are chosen based on a simple pairwise comparison:
-    $$X_{i,\text{new}} (j,:) = \begin{cases} X_{i} (j,:) &\text{ if } f(X_{i} (j,:)) < f(X_{i} (j+N_p/2,:)) \\ X_{i} (j+N_p/2,:) & \text{ else} \end{cases}$$
+    $$X_{i,\text{new}} (j,:) = \begin{cases} X^{(i)} (j,:) &\text{ if } f(X^{(i)} (j,:)) < f(X^{(i)} (j+N_p/2,:)) \\ X^{(i)} (j+N_p/2,:) & \text{ else} \end{cases}$$
     Reset $i = 1$.</li>
     <!-- <strong>Otherwise go to the Mutation Step.</strong></li> -->
     <li><strong>The Mutation Step.</strong> <br>Sample $F_i$ and $CR_i$ values according to:
@@ -210,19 +210,19 @@ bool de(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
     $$CR_i = \begin{cases} u_4 & \text{ if } u_3 < \tau_{CR} \\ CR_{i-1} & \text{ else} \end{cases}$$
     If $i \leq N_p - N_p^{(b)}$:
     <ul>
-        <li>then for random and unique indices $a,b,c$:</li>
-        $$X^* = \begin{cases} X_i(c,:) + F_i \times (X_i(a,:) - X_i(b,:)) & \text{ if } r_s < 0.75 \text{ or } N_p \geq 100 \\ X_{i,\text{best}}^{(m)} + F_i \times (X_i(a,:) - X_i(b,:)) & \text{ else} \end{cases}$$
+        <li>then for unique random indices $a,b,c$:</li>
+        $$X^* = \begin{cases} X^{(i)}(c,:) + F_i \times (X^{(i)}(a,:) - X^{(i)}(b,:)) & \text{ if } r_s < 0.75 \text{ or } N_p \geq 100 \\ X_{i,\text{best}}^{(m)} + F_i \times (X^{(i)}(a,:) - X^{(i)}(b,:)) & \text{ else} \end{cases}$$
     </ul>
     Else, if $N_p - N_p^{(b)} < i \leq N_p$:
     <ul>
-        <li>then for random and unique indices $a,b$:</li>
-        $$X^* = X_{i,\text{best}}^{(b)} + F_i \times (X_i(a,:) - X_i(b,:))$$
+        <li>then for unique random indices $a,b$:</li>
+        $$X^* = X_{i,\text{best}}^{(b)} + F_i \times (X^{(i)}(a,:) - X^{(i)}(b,:))$$
     </ul>
     <li><strong>The Crossover Step.</strong> <br>For a random integer $r_k \in \{1, \ldots, d\}$,</li>
-    $$X_c^* (j,k) = \begin{cases} X^*(j,k) & \text{ if } u_k \leq CR \text{ or } k = r_k \\ X_i (j,k) & \text{ else } \end{cases}$$
+    $$X_c^* (j,k) = \begin{cases} X^*(j,k) & \text{ if } u_k \leq CR_i \text{ or } k = r_k \\ X^{(i)} (j,k) & \text{ else } \end{cases}$$
     <li><strong>The Update Step.</strong></li>
-    $$X_{i+1} (j,:) = \begin{cases} X_c^*(j,:) & \text{ if } f(X_c^*(j)) < f(X_i(j)) \\ X_i (j) & \text{ else } \end{cases}$$
-    <li><strong>Setting the 'best' vector.</strong> <br> Let $X_{i+1,\text{best}}^{(m)} := \arg \min \{ f(X_{i+1}(1,:)), \ldots, f(X_{i+1}(N_p^{(m)},:)) \}$ and $X_{i+1,\text{best}}^{(b)} := \arg \min \{ f(X_{i+1}(N_p^{(m)}+1,:)), \ldots, f(X_{i+1}(N_p,:)) \}$.
+    $$X^{(i+1)} (j,:) = \begin{cases} X_c^*(j,:) & \text{ if } f(X_c^*(j)) < f(X^{(i)}(j)) \\ X^{(i)} (j) & \text{ else } \end{cases}$$
+    <li><strong>Setting the 'best' vector.</strong> <br> Let $X_{i+1,\text{best}}^{(m)} := \arg \min \{ f(X^{(i+1)}(1,:)), \ldots, f(X^{(i+1)}(N_p^{(m)},:)) \}$ and $X_{i+1,\text{best}}^{(b)} := \arg \min \{ f(X^{(i+1)}(N_p^{(m)}+1,:)), \ldots, f(X^{(i+1)}(N_p,:)) \}$.
     <ul>
         <li>If $i = N_p^{(m)}$ and $f(X_{i+1,\text{best}}^{(m)}) < f(X_{i,\text{best}}^{(b)})$, set</li>
         $$X_{\text{xchg}} := X_{i+1,\text{best}}^{(m)}$$
