--- a/optimlib_docs_bfgs.html
+++ b/optimlib_docs_bfgs.html
@@ -158,7 +158,7 @@ bool bfgs(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& va
 <ul>
     <li>The descent direction is computed using
     $$d^{(i)} = -W^{(i)} \nabla f^{(i)}$$
-    where $W^{(i)}$ is the <strong>approximate inverse hessian</strong> of $f$ and $\nabla f^{(i)}$ is the gradiant vector at values $x^{(i)}$.</li>
+    where $W^{(i)}$ is the <strong>approximate inverse hessian</strong> of $f$ at stage $i$, and $\nabla f^{(i)}$ is the gradient of $f$ evaluated at $x^{(i)}$.</li>
 
     <li>$W^{(i)}$ is updated using</li>
     $$
@@ -169,7 +169,7 @@ bool bfgs(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& va
         s &:= x^{(i+1)} - x^{(i)} \\
         y &:= \nabla f^{(i+1)} - \nabla f^{(i)}
     \end{align*}
-    <li>The values are then updated:
+    <li>The input values are then updated:
     $$x^{(i+1)} = x^{(i)} + \alpha^{(i)} d^{(i)}$$
     where $\alpha^{(i)}$ is found via line search:
     $$\alpha^{(i)} = \arg \min_\alpha f(x^{(i)} + \alpha d^{(i)})$$
