--- a/bmr.html
+++ b/bmr.html
@@ -116,7 +116,7 @@ pre {
             <li>Minnesota prior, and</li>
             <li>Mattias Villani's steady-state prior.</li>
         </ul>
-        <li>BMR can also estimate BVARs with time-varying parameters, as well as classical (non-Bayesian) VARs.</li>
+        <li>BMR can estimate BVARs with time-varying parameters, as well as classical (non-Bayesian) VARs.</li>
         </ul>
         </td>
         <td>
@@ -130,7 +130,7 @@ pre {
         <li>For DSGE models, the library can
             <ul>
                 <li>solve models using Harald Uhlig's method of undetermined coefficients and Chris Sims' canonical decomposition;</li>
-                <li>estimate models using MCMC and a choice of filtering methods, the Kalman filter or Chandrasekhar recursions; and</li>
+                <li>estimate models using MCMC with a choice of filtering methods: the Kalman filter or Chandrasekhar recursions; and</li>
                 <li>estimate a hybrid DSGE-VAR model.</li>
             </ul>
         </ul>
