--- a/bmr_docs_vars_bvarm.html
+++ b/bmr_docs_vars_bvarm.html
@@ -170,7 +170,7 @@ bvar_obj$build(data_endog,data_exog,cons_term,p)
 </pre>
 
 <ul>
-    <li><code>data_endog</code> a $n \times m$ matrix of endogenous varibles.</li>
+    <li><code>data_endog</code> a $n \times M$ matrix of endogenous varibles.</li>
     <li><code>data_exog</code> a $n \times q$ matrix of exogenous varibles.</li>
     <li><code>cons_term</code> a logical value (TRUE/FALSE) indicating the presence of a constant term (intercept) in the model.</li>
     <li><code>p</code> lag order (integer).</li>
