--- a/bmr_docs_vars_bvarcnw.html
+++ b/bmr_docs_vars_bvarcnw.html
@@ -279,17 +279,17 @@ bvar_data <- data.matrix(USMacroData[,2:4])
 #
 
 coef_prior <- c(0.9,0.9,0.9)
-XiBeta <- 4
-XiSigma <- 1
-gamma = 4
+HP_1 <- 1/2
+HP_3 <- 1
+gamma <- 4
 
-bvar_obj <- new(bvarinww)
+bvar_obj <- new(bvarcnww)
 
 #
 
 bvar_obj$build(bvar_data,TRUE,4)
-bvar_obj$prior(coef_prior,XiBeta,XiSigma,gamma)
-bvar_obj$gibbs(10000,5000)
+bvar_obj$prior(coef_prior,HP_1,HP_3,gamma)
+bvar_obj$gibbs(10000)
 
 IRF(bvar_obj,20,var_names=colnames(bvar_data),save=FALSE)
 plot(bvar_obj,var_names=colnames(bvar_data),save=FALSE)
