--- a/bmr_docs_vars_bvarinw.html
+++ b/bmr_docs_vars_bvarinw.html
@@ -249,7 +249,7 @@ bvar_data <- data.matrix(USMacroData[,2:4])
 coef_prior <- c(0.9,0.9,0.9)
 XiBeta <- 4
 XiSigma <- 1
-gamma = 4
+gamma <- 4
 
 bvar_obj <- new(bvarinww)
 
