--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -209,7 +209,7 @@ bool pso(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& val
     $$\min_{x \in [-15,-5], y \in [-3,3]} \left\{ 100 \sqrt{| y - 0.01 x^2|} + 0.01 | x + 10 | \right\}$$
 </ul>
 
-<p>The first functions is bumpy, contains many local minima, four global minima; the second contains a particularly difficult-to-traverse ridge. Plots of both functions are given below.</p>
+<p>The first function is bumpy, contains many local minima, and four global minima; the second contains a particularly difficult-to-traverse ridge. Plots of both functions are given below.</p>
 
 <!-- <img class="img-responsive center-block" src="pics/rastrigin_fn.png" alt=""> -->
 
