--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -231,7 +231,7 @@ bool pso(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& val
 
 <br>
 
-<p>Code implementing these examples using OptimLib is given below.</p>
+<p>Code implementing these examples with OptimLib is given below.</p>
 
 <pre class="brush: cpp;">
 #include "optim.hpp"
