--- a/statslib.html
+++ b/statslib.html
@@ -251,10 +251,10 @@ cd dens
     stats::dnorm(&lt;value&gt;,&lt;mean parameter&gt;,&lt;standard deviation&gt;);</pre>
     <li>cumulative distribution functions: <code>stats::p*</code>. For example, the Gamma CDF is called using</li>
     <pre class="brush: c++;">
-    stats::pgamma(&lt;value&gt;,&lt;shape parameter&gt;,&lt;scale deviation&gt;);</pre>
+    stats::pgamma(&lt;value&gt;,&lt;shape parameter&gt;,&lt;scale parameter&gt;);</pre>
     <li>quantile functions: <code>stats::q*</code>. For example, the Beta quantile is called using</li>
     <pre class="brush: c++;">
-    stats::qbeta(&lt;value&gt;,&lt;a parameter&gt;,&lt;b deviation&gt;);</pre>
+    stats::qbeta(&lt;value&gt;,&lt;a parameter&gt;,&lt;b parameter&gt;);</pre>
     <li>random sampling: <code>stats::r*</code>. For example, to generate a single draw from the Logistic distribution:</li>
     <pre class="brush: c++;">
     stats::rlogis(&lt;location parameter&gt;,&lt;scale parameter&gt;,&lt;seed value or random number engine&gt;);</pre>
