--- a/optimlib.html
+++ b/optimlib.html
@@ -185,13 +185,11 @@ cd ./optim
 ./configure -i "/usr/local" -p
 make
 make install</pre>
-<p>The last line will install OptimLib into <samp>/usr/local</sampe></p>
+<p>The last line will install OptimLib into <samp>/usr/local</samp></p>
 
 <p>Configuration options: (see <code>./configure -h</code>)</p>
 <ul>
-    <li><code>-c</code> a coverage build</li>
-    <li><code>-d</code> a 'development' build</li>
-    <li><code>-g</code> a debugging build (optimization flags set to <code>-O0 -g</code>)</li>
+    <strong>Primary</strong>
     <li><code>-h</code> print help</li>
     <li><code>-i</code> install path; default: the build directory</li>
     <li><code>-m</code> specify the BLAS and Lapack libraries to link against;
@@ -199,6 +197,10 @@ make install</pre>
     <li><code>-o</code> compiler optimization options;
     <br> &nbsp &nbsp &nbsp &nbsp default: <code>-O3 -march=native -ffp-contract=fast -flto -DARMA_NO_DEBUG</code>
     <li><code>-p</code> enable OpenMP parallelization features (<strong>recommended</strong>)</li>
+    <strong>Secondary</strong>
+    <li><code>-c</code> a coverage build (used with Codecov)</li>
+    <li><code>-d</code> a 'development' build</li>
+    <li><code>-g</code> a debugging build (optimization flags set to <code>-O0 -g</code>)</li>
 </ul>
 
 <hr>
