--- a/trame.html
+++ b/trame.html
@@ -142,13 +142,13 @@
 
 <br>
 
-<p><strong>License</strong>: TraME is licensed under the GNU General Public License (GPL) version 2, or (at your option) any later version.</p>
-
 <p><strong>Authors</strong>:</p>
 <ul>
     <li>TraME Team: <a href="http://alfredgalichon.com/" target="_blank">Alfred Galichon</a> and <a href="https://www.kthohr.com" target="_blank">Keith O'Hara</a>
     <li>Contributors: Yifei Sun, <a href="https://sites.google.com/site/webersimonsite/home" target="_blank">Simon Weber</a></li>
 </ul>
+
+<p><a href="https://raw.githubusercontent.com/TraME-Project/TraME/master/LICENSE" target="_blank"><img src="https://img.shields.io/badge/Licence-GPL%20v2-blue.svg" alt="License"></a></p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
@@ -156,29 +156,38 @@
 
 <ul>
     <li>The source code is available on <a href="https://github.com/TraME-Project/TraME" target="_blank">GitHub</a>.</li>
-    <li>To use the linear programming features, TraME requires an installation of Gurobi or GLPK.</li>
+    <li>To use the linear programming features TraME requires an installation of Gurobi or GLPK.</li>
     <!-- <li><strong>Note:</strong> Gurobi performs significantly better than GLPK.</li> -->
 </ul>
 
-<p>TraME can be installed in the standard way:</p>
-<pre class="brush: bash;"> 
-./configure
+<p>The library can be installed on Unix-alike systems via the standard <code>./configure && make</code> method:</p>
+<pre class="brush: bash;">
+# clone TraME into the current directory
+git clone https://github.com/TraME-Project/TraME ./trame
+# build and install
+cd ./trame
+./configure -i "/usr/local" -p
 make
 make install</pre>
+<p>The last line will install TraME to <samp>/usr/local</samp>.</p>
 
-<p>This will install the library into <samp>/usr/local</sampe></p>
-
-<p>Configure options:</p>
+<p>Configuration options: (see <code>./configure -h</code>)</p>
 <ul>
+    <strong>Primary</strong>
+    <li><code>-h</code> print help</li>
+    <li><code>-i</code> install path; default: the build directory</li>
+    <li><code>-l</code> specify a linear programming library to use; 
+    <br> &nbsp &nbsp &nbsp &nbsp for example <code>-l glpk</code> or <code>-l gurobi</code></li>
+    <li><code>-m</code> specify the BLAS and Lapack libraries to link against;
+    <br> &nbsp &nbsp &nbsp &nbsp examples: <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
+    <li><code>-o</code> compiler optimization options;
+    <br> &nbsp &nbsp &nbsp &nbsp default: <code>-O3 -march=native -ffp-contract=fast -flto -DARMA_NO_DEBUG</code>
+    <li><code>-p</code> enable OpenMP parallelization features (recommended)</li>
+    
+    <strong>Secondary</strong>
     <li><code>-c</code> a coverage build (used with Codecov)</li>
     <li><code>-d</code> a 'development' build</li>
     <li><code>-g</code> a debugging build (optimization flags set to <code>-O0 -g</code>)</li>
-    <li><code>-h</code> print help</li>
-    <li><code>-i</code> install path; default: the build directory</li>
-    <li><code>-l</code> specify a linear programming library to use; for example <code>-l glpk</code> or <code>-l gurobi</code></li>
-    <li><code>-m</code> specify the BLAS and Lapack libraries to link against; for example, <code>-m "-lopenblas"</code> or -m "-framework Accelerate"</li>
-    <li><code>-o</code> compiler optimization options; defaults to <code>-O3 -march=native -ffp-contract=fast -flto -DARMA_NO_DEBUG</code>
-    <li><code>-p</code> enable OpenMP parallelization features (recommended)</li>
 </ul>
 
 <hr>
