--- a/bmr_docs_vars_bvartvp.html
+++ b/bmr_docs_vars_bvartvp.html
@@ -84,6 +84,7 @@ pre {
 <br>
 
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -99,6 +100,14 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
+<p>BVAR with time-varying coefficients.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
@@ -363,6 +372,10 @@ IRF(bvar_obj,20,which_irfs,var_names=colnames(USMacroData),save=FALSE)
 plot(bvar_obj,var_names=colnames(USMacroData),save=FALSE)
 </pre>
 
+<hr>
+
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
