--- a/bmr_docs_vars_cvar.html
+++ b/bmr_docs_vars_cvar.html
@@ -84,6 +84,7 @@ pre {
 <br>
 
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -99,6 +100,14 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
+<p>Classical (frequentist) VAR model.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
@@ -236,6 +245,10 @@ plot(var_obj,var_names=colnames(USMacroData),save=FALSE)
 forecast(var_obj,shocks=TRUE,var_names=colnames(USMacroData),back_data=10,save=FALSE)
 </pre>
 
+<hr>
+
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
