--- a/optimlib.html
+++ b/optimlib.html
@@ -140,7 +140,7 @@
     <div class="col-md-2"></div>
     <div class="col-md-8">
 
-<p>OptimLib is a lightweight C++ library of numerical optimization methods for nonlinear functions.</p>
+<p>OptimLib is a C++ library of numerical optimization methods for nonlinear functions.</p>
 
 <hr>
 
