--- a/optimlib.html
+++ b/optimlib.html
@@ -150,7 +150,7 @@
     <li>Derivative-free optimization using advanced, parallelized metaheuristics.</li>
     <li>Constrained optimization routines can handle simple box constraints, or systems of nonlinear constraints.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix-based computation.</li>
-    <li>OpenMP-accelerated library, with straightforward linking with parallelized BLAS libraries such as OpenBLAS.</li>
+    <li>OpenMP-accelerated library, with straightforward linking to parallelized BLAS libraries such as OpenBLAS.</li>
     <li>Released under a permissive, non-GPL license.</li>
 </ul>
 
