--- a/mcmclib.html
+++ b/mcmclib.html
@@ -120,6 +120,8 @@
             <li>Differential Evolution</li>
         </ul>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix-based computation.</li>
+    <li><a href="https://en.wikipedia.org/wiki/OpenMP" target="_blank">OpenMP</a>-accelerated algorithms for parallel computation.</li>
+    <li>Straightforward linking with parallelized BLAS libraries, such as <a href="https://github.com/xianyi/OpenBLAS" target="_blank">OpenBLAS</a>.</li>
     <li>Released under a permissive, non-GPL license.</li>
 </ul>
 
