--- a/optimlib.html
+++ b/optimlib.html
@@ -150,7 +150,8 @@
     <li>Derivative-free optimization using advanced, parallelized metaheuristics.</li>
     <li>Constrained optimization routines can handle simple box constraints, or systems of nonlinear constraints.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix-based computation.</li>
-    <li>OpenMP-accelerated library, with straightforward linking to parallelized BLAS libraries such as OpenBLAS.</li>
+    <li><a href="https://en.wikipedia.org/wiki/OpenMP" target="_blank">OpenMP</a>-accelerated algorithms for parallel computation.</li>
+    <li>Straightforward linking with parallelized BLAS libraries, such as <a href="https://github.com/xianyi/OpenBLAS" target="_blank">OpenBLAS</a>.</li>
     <li>Released under a permissive, non-GPL license.</li>
 </ul>
 
