--- a/mcmclib.html
+++ b/mcmclib.html
@@ -168,7 +168,7 @@ make install</pre>
 
 <h4 style="text-align: left;"><strong style="font-size: 95%;">Armadillo</strong></h3>
 
-MCMCLib is built on the Armadillo C++ linear algebra library. The <code>configure</code> script will search for Armadillo files in the usual places: <code>/usr/include</code>, <code>/usr/local/include</code>, <code>/opt/include</code>, <code>/opt/local/include</code>. If the Armadillo header files are installed elsewhere, set the following environment variable <strong>before</strong> running <code>configure</code>:
+MCMCLib is built on the Armadillo C++ linear algebra library. The <code>configure</code> script will search for Armadillo files in the standard locations: <code>/usr/include</code>, <code>/usr/local/include</code>, <code>/opt/include</code>, <code>/opt/local/include</code>. If the Armadillo header files are installed elsewhere, set the following environment variable <strong>before</strong> running <code>configure</code>:
 <pre class="brush: bash;">
 export ARMA_INCLUDE_PATH=/path/to/armadillo</pre>
 
