--- a/mcmclib.html
+++ b/mcmclib.html
@@ -151,7 +151,8 @@ make install</pre>
 <ul>
     <strong>Primary</strong>
     <li><code>-h</code> print help</li>
-    <li><code>-i</code> install path; default: the build directory</li>
+    <li><code>-i</code> install path; default: the build directory
+    <br> &nbsp &nbsp &nbsp &nbsp example: <code>-i "/usr/local"</code></li>
     <li><code>-m</code> specify the BLAS and Lapack libraries to link against;
     <br> &nbsp &nbsp &nbsp &nbsp examples: <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
     <li><code>-o</code> compiler optimization options;
