--- a/mcmclib_docs_rmhmc.html
+++ b/mcmclib_docs_rmhmc.html
@@ -115,7 +115,7 @@ pre {
 
 <pre class="brush: cpp;">
 bool rmhmc(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* target_data)&gt; target_log_kernel, void* target_data, std::function&lt;arma::mat (const arma::vec& vals_inp, arma::cube* tensor_deriv_out, void* tensor_data)&gt; tensor_fn, void* tensor_data);
-bool rmhmc(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* target_data)&gt; target_log_kernel, void* target_data, std::function&lt;arma::mat (const arma::vec& vals_inp, arma::cube* tensor_deriv_out, void* tensor_data)&gt; tensor_fn, void* tensor_data, algo_settings& settings);
+bool rmhmc(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* target_data)&gt; target_log_kernel, void* target_data, std::function&lt;arma::mat (const arma::vec& vals_inp, arma::cube* tensor_deriv_out, void* tensor_data)&gt; tensor_fn, void* tensor_data, algo_settings_t& settings);
 </pre>
 <p><strong>Function arguments:</strong></p>
 <ul>
@@ -293,7 +293,7 @@ arma::mat tensor_fn(const arma::vec& vals_inp, arma::cube* tensor_deriv_out, voi
     initial_val(0) = mu + 1.0; // mu
     initial_val(1) = sigma + 1.0; // sigma
  
-    mcmc::algo_settings settings;
+    mcmc::algo_settings_t settings;
  
     settings.hmc_step_size = 0.1;
     settings.hmc_n_burnin = 1000;
