--- a/mcmclib_docs_rwmh.html
+++ b/mcmclib_docs_rwmh.html
@@ -115,7 +115,7 @@ pre {
 
 <pre class="brush: cpp;">
 bool rwmh(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, void* target_data)&gt; target_log_kernel, void* target_data);
-bool rwmh(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, void* target_data)&gt; target_log_kernel, void* target_data, algo_settings& settings);
+bool rwmh(const arma::vec& initial_vals, arma::mat& draws_out, std::function&lt;double (const arma::vec& vals_inp, void* target_data)&gt; target_log_kernel, void* target_data, algo_settings_t& settings);
 </pre>
 <p><strong>Function arguments:</strong></p>
 <ul>
