--- a/mcmclib_docs_settings.html
+++ b/mcmclib_docs_settings.html
@@ -88,7 +88,8 @@ pre {
 
 <p><strong>Struct definition:</strong></p>
 <pre class="brush: cpp;">
-struct algo_settings {
+struct algo_settings_t
+{
     // general
     bool vals_bound = false;
 
