--- a/mcmclib_header.html
+++ b/mcmclib_header.html
@@ -21,7 +21,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Misc <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="mcmclib_docs_settings.html">algo_settings</a></li>
+                    <li><a href="mcmclib_docs_settings.html">Settings</a></li>
                 </ul>
             </li>
         </ol>
