--- a/mcmclib_docs_settings.html
+++ b/mcmclib_docs_settings.html
@@ -81,6 +81,12 @@ pre {
         <!-- Page Heading/Breadcrumbs -->
         <div id="mcmchead"></div>
 
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
 <h3 style="text-align: left;"><strong style="font-size: 120%;">MCMCLib: Algorithm Settings</strong></h3>
 
 <hr>
@@ -154,6 +160,10 @@ struct algo_settings_t
 };
 </pre>
 
+<hr>
+
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
